--- a/client/package.json
+++ b/client/package.json
@@ -31,11 +31,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.3",
-    "@angular-eslint/builder": "13.0.1",
-    "@angular-eslint/eslint-plugin": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/builder": "^2.0.0",
+    "@angular-eslint/eslint-plugin": "^2.0.0",
+    "@angular-eslint/eslint-plugin-template": "^2.0.0",
     "@angular-eslint/schematics": "13.0.1",
-    "@angular-eslint/template-parser": "13.0.1",
+    "@angular-eslint/template-parser": "^2.0.0",
     "@angular/cli": "~13.2.3",
     "@angular/compiler-cli": "~13.2.2",
     "@angular/language-service": "~13.2.2",
@@ -44,8 +44,8 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^13.7.4",
-    "@typescript-eslint/eslint-plugin": "5.11.0",
-    "@typescript-eslint/parser": "5.11.0",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
     "cypress": "^6.5.0",
     "cypress-mongo-seeder": "^1.0.8",
     "eslint": "^8.8.0",
