--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "cy:open": "cypress open",
-    "docker-build": "npm run build -- --configuration production"
+    "docker-build": "npm run build"
   },
   "private": true,
   "dependencies": {
