Update a bunch of client packages & convert to `@cypress/schematic`

--- a/client/angular.json
+++ b/client/angular.json
@@ -113,7 +113,7 @@
           }
         },
         "e2e": {
-          "builder": "@nrwl/cypress:cypress",
+          "builder": "@cypress/schematic:cypress",
           "options": {
             "cypressConfig": "cypress.json",
             "tsConfig": "cypress/tsconfig.json",
