--- a/client/package.json
+++ b/client/package.json
@@ -38,27 +38,26 @@
     "@angular/cli": "~13.2.4",
     "@angular/compiler-cli": "~13.2.3",
     "@angular/language-service": "~13.2.3",
-    "@nrwl/cypress": "^11.3.0",
-    "@nrwl/workspace": "^11.3.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^13.7.4",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "cypress": "^6.5.0",
+    "@cypress/schematic": "^1.6.0",
+    "@types/jasmine": "~3.10.3",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^17.0.18",
+    "@typescript-eslint/eslint-plugin": "5.12.0",
+    "@typescript-eslint/parser": "5.12.0",
+    "cypress": "^9.4.1",
     "cypress-mongo-seeder": "^1.0.8",
-    "eslint": "^8.2.0",
-    "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jsdoc": "37.9.0",
+    "eslint": "^8.9.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsdoc": "^37.9.4",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-core": "~3.10.1",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.3.16",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^2.2.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ts-node": "~8.3.0",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "ts-node": "~10.5.0",
     "typescript": "~4.5.5"
   }
 }
