Fix Markdown lint warnings and spelling issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,12 @@
       "Bson",
       "compat",
       "CSCI",
+      "dont",
+      "jacoco",
       "Javalin",
+      "LABTASKS",
+      "Mockito",
+      "mongoseed",
       "sidenav",
       "testid",
       "todos",
