Rationalize the test method names in `UserControllerSpec`
These didn't match the Java standards, so I changed them to match the updated naming in Lab 3.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,18 @@
       "Bson",
       "compat",
       "CSCI",
+      "dont",
+      "invalidemail",
+      "invalidrole",
+      "jacoco",
       "Javalin",
+      "LABTASKS",
+      "Mockito",
+      "mongoseed",
+      "notanumber",
+      "OHMNET",
+      "sams",
+      "Servlet",
       "sidenav",
       "testid",
       "todos",
