--- a/client/package.json
+++ b/client/package.json
@@ -12,50 +12,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.3",
-    "@angular/cdk": "~13.2.3",
-    "@angular/common": "~13.2.3",
-    "@angular/compiler": "~13.2.3",
-    "@angular/core": "~13.2.3",
-    "@angular/flex-layout": "~13.0.0-beta.38",
-    "@angular/forms": "~13.2.3",
-    "@angular/material": "~13.2.3",
-    "@angular/platform-browser": "~13.2.3",
-    "@angular/platform-browser-dynamic": "~13.2.3",
-    "@angular/router": "~13.2.3",
-    "rxjs": "~7.5.4",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "^15.1.2",
+    "@angular/cdk": "^15.1.2",
+    "@angular/common": "^15.1.2",
+    "@angular/compiler": "^15.1.2",
+    "@angular/core": "^15.1.2",
+    "@angular/forms": "^15.1.2",
+    "@angular/material": "^15.1.2",
+    "@angular/platform-browser": "^15.1.2",
+    "@angular/platform-browser-dynamic": "^15.1.2",
+    "@angular/router": "^15.1.2",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.4",
-    "@angular-eslint/builder": "^13.1.0",
-    "@angular-eslint/eslint-plugin": "^13.1.0",
-    "@angular-eslint/eslint-plugin-template": "^13.1.0",
-    "@angular-eslint/schematics": "13.1.0",
-    "@angular-eslint/template-parser": "^13.1.0",
-    "@angular/cli": "~13.2.4",
-    "@angular/compiler-cli": "~13.2.3",
-    "@angular/language-service": "~13.2.3",
-    "@cypress/schematic": "^1.6.0",
-    "@types/jasmine": "~3.10.3",
-    "@types/node": "^16.11.25",
-    "@typescript-eslint/eslint-plugin": "5.12.0",
-    "@typescript-eslint/parser": "5.12.0",
-    "cypress": "^9.4.1",
-    "@floogulinc/cypress-mongo-seeder": "^1.1.0",
-    "eslint": "^8.9.0",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jsdoc": "^37.9.4",
+    "@angular-devkit/build-angular": "^15.1.3",
+    "@angular-eslint/builder": "~15.2.0",
+    "@angular-eslint/eslint-plugin": "~15.2.0",
+    "@angular-eslint/eslint-plugin-template": "~15.2.0",
+    "@angular-eslint/schematics": "~15.2.0",
+    "@angular-eslint/template-parser": "~15.2.0",
+    "@angular/cli": "^15.1.3",
+    "@angular/compiler-cli": "^15.1.2",
+    "@angular/language-service": "^15.1.2",
+    "@cypress/schematic": "^2.1.1",
+    "@floogulinc/cypress-mongo-seeder": "^1.1.1",
+    "@types/jasmine": "^4.0.3",
+    "@types/node": "^18.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.38.1",
+    "cypress": "^12.5.1",
+    "eslint": "^8.24.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.2",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "~3.10.1",
+    "jasmine-core": "^4.4.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "^6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "^2.2.0",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "ts-node": "~10.5.0",
-    "typescript": "~4.5.5"
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.8.3"
   }
 }
