--- a/client/angular.json
+++ b/client/angular.json
@@ -100,6 +100,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
+            "codeCoverage": true,
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -133,7 +134,6 @@
       }
     }
   },
-  "defaultProject": "client",
   "cli": {
     "analytics": false
   }
