--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "^15.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.4.0",
-    "zone.js": "~0.11.6"
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1501.4",
@@ -45,9 +45,9 @@
     "@typescript-eslint/parser": "^5.38.1",
     "cypress": "^12.5.1",
     "eslint": "^8.24.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.2",
-    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^40.0.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "jasmine-core": "^4.4.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.0",
