--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -17,6 +17,7 @@ jobs:
       with:
         node-version: 18
         cache: 'npm'
+        cache-dependency-path: ./client/package-lock.json
 
     - name: Install dependencies (npm ci)
       run: npm ci
@@ -36,6 +37,7 @@ jobs:
       with:
         node-version: 18
         cache: 'npm'
+        cache-dependency-path: ./client/package-lock.json
 
     - name: Install dependencies (npm ci)
       run: npm ci
