--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -40,6 +40,7 @@ jobs:
       with:
         node-version: 18
         cache: 'npm'
+        cache-dependency-path: ./client/package-lock.json
 
     - name: Run e2e tests
       uses: cypress-io/github-action@v5
