--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -13,6 +13,7 @@ jobs:
     steps:
     - name: Checkout repository
       - uses: actions/checkout@v3
+    - name: Use Node.js 18
       - uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -33,6 +34,7 @@ jobs:
     steps:
     - name: Checkout repository
       - uses: actions/checkout@v3
+    - name: Use Node.js 18
       - uses: actions/setup-node@v3
         with:
           node-version: 18
