Minor changes to match iteration template

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
       "compat",
       "CSCI",
       "dont",
+      "floogulinc",
       "Ibmers",
       "invalidemail",
       "invalidrole",
@@ -25,6 +26,7 @@
       "sams",
       "Servlet",
       "sidenav",
+      "sortorder",
       "testid",
       "todos",
       "unsub"
