--- a/client/package.json
+++ b/client/package.json
@@ -8,54 +8,56 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "docker-build": "npm run build"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.2",
-    "@angular/cdk": "^15.1.2",
-    "@angular/common": "^15.1.2",
-    "@angular/compiler": "^15.1.2",
-    "@angular/core": "^15.1.2",
-    "@angular/forms": "^15.1.2",
-    "@angular/material": "^15.1.2",
-    "@angular/platform-browser": "^15.1.2",
-    "@angular/platform-browser-dynamic": "^15.1.2",
-    "@angular/router": "^15.1.2",
+    "@angular-devkit/core": "^17.1.2",
+    "@angular/animations": "^17.1.2",
+    "@angular/cdk": "^17.1.2",
+    "@angular/common": "^17.1.2",
+    "@angular/compiler": "^17.1.2",
+    "@angular/core": "^17.1.2",
+    "@angular/forms": "^17.1.2",
+    "@angular/material": "^17.1.2",
+    "@angular/platform-browser": "^17.1.2",
+    "@angular/platform-browser-dynamic": "^17.1.2",
+    "@angular/router": "^17.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.4.0",
-    "zone.js": "^0.12.0"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1501.4",
-    "@angular-devkit/build-angular": "^15.1.3",
-    "@angular-eslint/builder": "~15.2.0",
-    "@angular-eslint/eslint-plugin": "~15.2.0",
-    "@angular-eslint/eslint-plugin-template": "~15.2.0",
-    "@angular-eslint/schematics": "~15.2.0",
-    "@angular-eslint/template-parser": "~15.2.0",
-    "@angular/cli": "^15.1.3",
-    "@angular/compiler-cli": "^15.1.2",
-    "@angular/language-service": "^15.1.2",
-    "@cypress/schematic": "^2.1.1",
+    "@angular-devkit/architect": "^0.1701.2",
+    "@angular-devkit/build-angular": "^17.1.2",
+    "@angular-eslint/builder": "~17.2.1",
+    "@angular-eslint/eslint-plugin": "~17.2.1",
+    "@angular-eslint/eslint-plugin-template": "~17.2.1",
+    "@angular-eslint/schematics": "~17.2.1",
+    "@angular-eslint/template-parser": "~17.2.1",
+    "@angular/cli": "^17.1.2",
+    "@angular/compiler-cli": "^17.1.2",
+    "@angular/language-service": "^17.1.2",
+    "@cypress/schematic": "^2.5.1",
     "@floogulinc/cypress-mongo-seeder": "^1.1.1",
-    "@types/jasmine": "^4.0.3",
-    "@types/node": "^18.13.0",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.38.1",
+    "@types/jasmine": "^5.1.4",
+    "@types/node": "^18.19.6",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
     "cypress": "^13.6.2",
-    "eslint": "^8.24.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^40.0.0",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
-    "jasmine-core": "^4.4.0",
+    "eslint": "^8.53.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsdoc": "^48.0.4",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "jasmine-core": "^5.1.1",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.4.1",
-    "karma-chrome-launcher": "~3.1.1",
-    "karma-coverage": "^2.2.0",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "^2.2.1",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.8.3"
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.2.2"
   }
 }
