Create a simple company list component
I had hoped to fancy this up more (esp. the HTML), but it works and I need to go to bed.

The one really nice thing is that I was able to use a `Signal` in the component to avoid having any subscriptions anywhere!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,7 +29,8 @@
       "sortorder",
       "testid",
       "todos",
-      "unsub"
+      "unsub",
+      "VINCH"
     ],
     "angular.enable-experimental-ivy-prompt": false,
 }
