--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,12 @@
     ],
     "cSpell.words": [
       "Bson",
+      "Checkstyle",
       "compat",
       "CSCI",
       "dont",
       "floogulinc",
+      "gradlew",
       "Ibmers",
       "invalidemail",
       "invalidrole",
