--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "ngxtension": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.4.0",
-    "zone.js": "^0.15.0"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1802.5",
